Effiency increased by replacing arraylist with linkedlist(queue)