@@ -6,25 +6,19 @@ import java.util.Scanner;
 import java.util.Vector;
 import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.io.File;
 
 //Do not change the name of the HeapSort class
 public class RadixSort{
-	
-	/* HeapSort(A)
-		Sort the array A using heap sort.
-		You may add additional functions (or classes) if needed, but the entire program must be
-		contained in this file.
-
-		Do not change the function signature (name/parameters).
-	*/
-	public static int[] RadixSort(int[] a){
-		ArrayList<ArrayList<Integer>> arraylist = new ArrayList<ArrayList<Integer>>(10);
-		for(int i=0; i<10; i++){
-			arraylist.add(i, new ArrayList<Integer>());
+	public static void RadixSort(int[] a){
+		int K = 1000;
+		ArrayList<LinkedList<Integer>> arraylist = new ArrayList<LinkedList<Integer>>();
+		for(int i=0; i<K; i++){
+			arraylist.add(i, new LinkedList<Integer>());
 		}
 		int l = a.length;
-		int maxValue = -1;
+		int maxValue = a[0];
 
 		// Find the maximum value, in order to get its digits
 		for (int i = 0; i < l; i++){
@@ -38,46 +32,35 @@ public class RadixSort{
 		// Find the digits of the maximum value
 		// digits should be 1 greater than the digit of maxValue
 		while(maxValue/digits != 0){
-			digits *= 10;
+			digits *= K;
 			numOfDigit++;
 		}
 
-		int m =10;
+		int m =K;
 		int n =1;
 
 		// k is a small constant
-		int []b = new int[l];
+
 		for(int k=0; k<numOfDigit; k++){
 			// n
 			for(int i=0; i< l; i++){
-				int listIndex = a[i] % m /n;
-				arraylist.get(listIndex).add(a[i]);
-				//System.out.println(arraylist.get(listIndex));
+				int value = a[i];
+				int listIndex = value % m /n;
+				arraylist.get(listIndex).addLast(value);
 			}
 
 			int index = 0;
-			for(int j=0; j<10; j++){
+			for(int j=0; j<K; j++){
 				//System.out.println(b.length);
 				int s = arraylist.get(j).size();
 				for(int o =0; o< s; o++){
-					b[index] = arraylist.get(j).get(0);
-					//System.out.println(arraylist.get(j) +" "+arraylist.get(j).size());
-					arraylist.get(j).remove(0);
+					a[index] = arraylist.get(j).removeFirst();
 					index++;
 				}
-				//System.out.println(index);
 			}
-			a = b;
-			m*=10;
-			n*=10;
+			m*=K;
+			n*=K;
 		}
-		//System.out.println(maxValue +"/"+digits);
-		/*
-		for(int j=0; j<l; j++){
-			System.out.print(a[j]+ " ");
-		}
-		System.out.println();*/
-		return a;
 	}
 	
 	/* main()
@@ -116,7 +99,7 @@ public class RadixSort{
 
 		long startTime = System.currentTimeMillis();
 
-		array = RadixSort(array);
+		RadixSort(array);
 
 		long endTime = System.currentTimeMillis();
 
@@ -137,6 +120,6 @@ public class RadixSort{
 				isSorted = false;
 
 		System.out.printf("Array %s sorted.\n",isSorted? "is":"is not");
-		System.out.printf("Total Time (seconds): %.2f\n",totalTimeSeconds);
+		System.out.printf("Total Time (seconds): %.4f\n",totalTimeSeconds);
 	}
 }
